--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 
 <body>
 <div class="container">
-    <form class="form-signin" action="/process_login" method="post">
+    <form class="form-signin" action="/login" method="post">
         <h2 class="form-signin-heading">Please sign in</h2>
         <p>
             <label for="email" class="sr-only"></label>
