--- a/src/main/resources/templates/user_profile.html
+++ b/src/main/resources/templates/user_profile.html
@@ -1,65 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
-<html lang="en">
 <head>
     <meta charset="UTF-8">
-
-
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--width=device-width - это, чтобы работали адаптивные версии на всех мобильных устройствах, т.е. ширина по девайсу-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-          crossorigin="anonymous">
+    <!--  Подключаем стили (CSS) Бутстрапа
+    rel (от relationship) – это атрибут, описывающий тег href-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+          integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
 
     <title>User page</title>
 </head>
 <body>
 
+<!--СОЗДАЕМ ШАПКУ-->
 <header>
     <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">
- <span th:text="${user.getEmail()}"></span>
-                <span> with roles: </span>
-                <span th:each="role : ${user.getRoles()}"
-                      th:text="${user.getRoles()}">
-                </span>
-
-            </span>
-
-            <a class="btn text-muted" aria-current="page" th:href="@{/logout}">Logout</a>
-
-        </div>
-
+    <span class="navbar-brand" id="navbarBrandUser">
+        <!--********** СКРИПТ **********-->
+    </span>
+        <form th:action="@{/logout}" th:method="POST">
+            <button type="submit" class="btn btn-outline-dark" style="color: lightgrey">Logout</button>
+        </form>
     </nav>
 </header>
 
-
-<br>
-
 <div class="d-flex align-items-start">
-
-    <div class = "col-2">
-
-        <div class = "nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical" >
-
-            <a class="nav-link active" id="v-pills-user-tab" data-bs-toggle="pill"
-               data-bs-target="#v-pills-user" type="button" role="tab" aria-controls="v-pills-user"
-               aria-selected="true">User</a>
+    <!-- Вертикальная левая панель с одной кнопкой User-->
+    <div class="col-2">
+        <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <button class="nav-link active" id="v-pills-user-tab" data-bs-toggle="pill" data-bs-target="#v-pills-user"
+                    type="button" role="tab" aria-controls="v-pills-user" aria-selected="true">User
+            </button>
         </div>
     </div>
 
+
+    <!-- ТАБЛИЦА С ДАННЫМИ О ТЕКУЩЕМ ЮЗЕРЕ-->
     <div class="col-10">
-        <div class="tab-content bg-light" id="v-pills-tabContent">
-
-
+        <div class="tab-content" id="v-pills-tabContent">
             <div class="tab-pane fade show active" id="v-pills-user" role="tabpanel" aria-labelledby="v-pills-user-tab">
-
                 <p class="fw-bold fs-3">User information-page</p>
 
                 <p class="fw-bold fs-5">About user</p>
@@ -72,29 +57,21 @@
                         <th>Role</th>
                     </tr>
                     </thead>
-                    <tbody>
-                    <tr>
-                        <td th:text="${user.getId()}"/>
-                        <td th:text="${user.getUsername()}"/>
-                        <td th:text="${user.getEmail()}"/>
-                        <td>
-                                         <span th:each="role : ${user.getRoles()}"
-                                               th:text="${user.getRoles()}">
-                                    </span>
-                        </td>
-                    </tr>
+                    <tbody id="tableUser">
+
                     </tbody>
                 </table>
             </div>
-
-
         </div>
     </div>
 </div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
+<script type="text/javascript" src="/current-user.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 </html>
