--- a/src/main/resources/templates/admin_profile.html
+++ b/src/main/resources/templates/admin_profile.html
@@ -6,11 +6,10 @@
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!--width=device-width - это, чтобы работали адаптивные версии на всех мобильных устройствах, т.е. ширина по девайсу-->
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--  Подключаем стили (CSS) Бутстрапа
-    rel (от relationship) – это атрибут, описывающий тег href-->
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
           integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
@@ -22,11 +21,11 @@
 
 <body>
 
-<!----------------------------------- Шапка------------------------------------------------------------------------->
+
 <header>
     <nav class="navbar navbar-dark bg-dark">
     <span class="navbar-brand" id="navbarBrandAdmin">
-        <!--********** СКРИПТ **********-->
+
     </span>
         <form th:action="@{/logout}" th:method="POST">
             <button type="submit" class="btn btn-outline-dark" style="color: lightgrey">Logout</button>
@@ -34,15 +33,12 @@
     </nav>
 </header>
 
-<!------------------------------------------------Навигация слева------------------------------------------------------->
-<!--СОЗДАЕМ ВКЛАДКИ СЛЕВА, у которых ниже раскрывающиеся блоки под id #v-pills-admin" и под id "#v-pills-user" будет панель юзера
-    У вкладки Admin будут еще две вкладки: Users table с id="nav-users_table-tab" и New user id="nav-new_user-tab"-->
 
-<div class="d-flex align-items-start"> <!--align-items-start - это выравнивание по горизонтали. start - это по верху-->
+<div class="d-flex align-items-start">
 
     <div class="col-2">
 
-        <!---------------------------- Вертикальная левая панель------------------------------>
+
         <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
 
             <ul class="nav nav-pills nav-fill flex-column">
@@ -58,12 +54,12 @@
         </div>
     </div>
 
-    <!--------- Содержимое справа от вертикальной левой панели----------------->
+
     <div class="container-fluid">
         <div class="col-10">
             <div class="tab-content" id="v-pills-tabContent">
 
-                <!-------------------- Закладка Админа справа-------------->
+
                 <div class="tab-pane fade show active" id="adminPanel" role="tabpanel">
 
                     <p class="fw-bold fs-4">Admin panel</p>
@@ -81,9 +77,9 @@
                         </ul>
                     </nav>
 
-                    <!--------КНОПКА TABLE USERS Список юзеров-->
+
                     <div class="tab-content" id="nav-tabContent">
-                        <!-------------- Закладка горизонтальной панели с таблицей со всеми пользователями--------->
+
                         <div class="tab-pane fade show active" id="allUsers" role="tabpanel">
 
                             <h3><b>All Users</b></h3>
@@ -100,25 +96,24 @@
                                 </thead>
 
                                 <tbody id="tableUsers">
-                                <!----Скрипт--->
+
                                 </tbody>
                             </table>
 
 
-                            <!-------------------------МОДАЛЬНОЕ ОКНО ДЛЯ EDIT------------------>
 
                             <div class="modal" tabindex="-1" id="editModal"
                                  aria-labelledby="EditModalLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                                     <div class="modal-content">
 
-                                        <!-- Заголовок модального окна EDIT -->
+
                                         <div class="modal-header">
                                             <h5 class="modal-title">Edit user</h5>
                                             <button type="button" class="close" data-dismiss="modal">&times;
                                             </button>
                                         </div>
-                                        <!---- Основное содержимое модального окна EDIT -->
+
                                         <div class="modal-body text-center">
                                             <div class="d-flex justify-content-center align-items-center container">
                                                 <div class="row">
@@ -166,8 +161,8 @@
                                                             <select multiple size="2"
                                                                     class="form-control"
                                                                     id="edit-roles" name="roles" required>
-                                                                <!--                                                                <option value="1">ADMIN</option>-->
-                                                                <!--                                                                <option value="2">USER</option>-->
+
+                                                                                                                      <option value="2">USER</option>-->
                                                             </select>
                                                         </div>
 
@@ -189,8 +184,7 @@
                                 </div>
                             </div>
 
-                            <!----------------------------------------------Модальное окно для удаления---------------------------------------------->
-                            <!--МОДАЛЬНОЕ ОКНО ДЛЯ DELETE-->
+
 
                             <div class="modal" tabindex="-1" id="deleteModal"
                                  aria-labelledby="deleteModalLabel" aria-hidden="true">
@@ -259,8 +253,8 @@
                                                                     id="delete-roles"
                                                                     name="roles"
                                                                     disabled>
-                                                                <!--                                                                <option value="1">ADMIN</option>-->
-                                                                <!--                                                                <option value="2">USER</option>-->
+
+                                                                                                                <option value="2">USER</option>-->
                                                             </select>
                                                         </div>
 
@@ -270,9 +264,7 @@
                                                                     data-dismiss="modal">Close
                                                             </button>
                                                             <input type="submit" class="btn btn-danger" value="Delete">
-                                                            <!--                                                            <button type="submit" class="btn btn-danger">-->
-                                                            <!--                                                                Delete-->
-                                                            <!--                                                            </button>-->
+
                                                         </div>
                                                     </form>
                                                 </div>
@@ -283,8 +275,7 @@
                             </div>
                         </div>
 
-                        <!-- КНОПКА NEW USER Форма для добавления нового юзера-->
-                        <!--Это блок под id "#nav-new_user", который раскрывается, когда нажимаешь вторую вкладку button "New user" под id "nav-new_user-tab"-->
+
                         <div class="tab-pane fade" id="newUser" role="tabpanel"
                              aria-labelledby="nav-new_user-tab">
 
@@ -330,8 +321,7 @@
                                                 id="create-roles"
                                                 name="roles"
                                                 required>
-                                            <!--                                        <option value="1">ADMIN</option>-->
-                                            <!--                                        <option value="2">USER</option>-->
+
                                         </select>
                                         <br>
                                         <input class="btn btn-info" type="submit" value="Add new user"/>
@@ -342,7 +332,7 @@
                     </div>
                 </div>
 
-                <!---------------- Таблица с информацией о текущем пользователе-------->
+
                 <div class="tab-pane" id="userPanel">
                     <div class="page-header" style="margin-top: 12px">
                         <h2>User information-page</h2>
