--- a/src/main/resources/templates/admin_profile.html
+++ b/src/main/resources/templates/admin_profile.html
@@ -184,7 +184,8 @@
                                 </div>
                             </div>
 
-
+                            <!----------------------------------------------Модальное окно для удаления---------------------------------------------->
+                            <!--МОДАЛЬНОЕ ОКНО ДЛЯ DELETE-->
 
                             <div class="modal" tabindex="-1" id="deleteModal"
                                  aria-labelledby="deleteModalLabel" aria-hidden="true">
@@ -254,7 +255,7 @@
                                                                     name="roles"
                                                                     disabled>
 
-                                                                                                                <option value="2">USER</option>-->
+
                                                             </select>
                                                         </div>
 
